gccida/c0/reload_as_needed
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_as_needed/src/reload1.c:4307:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
oldpat = ( rtx)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_as_needed/src/reload1.c:4314:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( *( _QWORD *)&insn[2] + 8LL)), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_as_needed/src/reload1.c:4314:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( *( _QWORD *)&insn[2] + 8LL)), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_as_needed/src/reload1.c:4341:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
prev = ( rtx)insn[1]; 
             ^~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_as_needed/src/obj/reload1.o] Error 1
